resources/styles.css
.c1,
.c2,
.c3,
.c4 {
    width: 100%;
}

.c1,
.c2,
.c3 {
    padding: 20px;
    box-sizing: border-box;
}

.container {
    color: #aaa;
    background-color: #222;
    background: rgba(16, 16, 16, 0.95);
    display: flex;
    flex-wrap: wrap;
}

@font-face {
    font-family: "wow";
    src: url("livecraft.woff");
}

.header_logo {
    font-family: wow, Arial, Helvetica, sans-serif;
    font-size: 64px;
    color: #09f;
    /* https://developer.mozilla.org/en-US/docs/Web/CSS/filter */
    filter: drop-shadow(5px 5px 7px #000);
    padding: 10px;
    box-sizing: border-box;
}

.header_logo img {
    width: 64px;
    height: 64px;
}

.footer {
    background-color: #000;
    padding: 10px;
    box-sizing: border-box;
    background-color: #111;
    background: rgba(0, 0, 0, 0.85);
    color: #aaa;
    font-variant: small-caps;
    font-size: 80%;
}

html {
    min-width: 100%;
    min-height: 100%;
    background-color: #222;
    background: linear-gradient(90deg, #111 0%, #222 100%);
    background: url("images/shadowlands.jpg") fixed center;
    background-origin: content-box;
    background-size: auto 120%;
}

body {
    margin: 20px;
    font-family: Arial, Helvetica, sans-serif;
}

p {
    line-height: 150%;
}

li {
    margin-top: 10px;
}

.c1 ol {
    padding: 0;
    padding-left: 10px;
}

.c2 img {
    width: 100%;
}

.c2 img.float {
    width: auto;
    max-width: 100%;
    max-height: 300px;
    float: left;
    margin: 20px;
}

@media (min-width: 600px) {
    .c1 {
        padding-top: 50px;
        width: 25%;
    }
    .c4 {
        width: 75%;
    }
    .container {
        flex-wrap: nowrap;
    }
}

@media (min-width: 800px) {
    .container,
    .menu,
    .header_logo,
    .page_title,
    .footer {
        /* <800 zaradi marginite, inache se poiaviava scrollbar */
        width: 760px;
        margin-left: auto;
        margin-right: auto;
    }
}

.menu {
    box-sizing: border-box;
    background-color: #111;
    background: rgba(0, 0, 0, 0.95);
    display: flex;
    flex-wrap: wrap;
}

.menu_link {
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: 0.1em;
    margin: 0 10px;
}

.c1 {
    background: rgba(16, 16, 16, 0.5);
}

a,
.menu_link {
    color: #aaa;
}

a:hover,
.menu_link:hover {
    color: #fff;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
    font-size: 50%;
    vertical-align: top;
}


/* https://www.w3schools.com/howto/howto_css_dropdown.asp */

.dropdown_content {
    position: absolute;
    background-color: #222;
    color: #aaa;
    padding: 20px;
    background: rgba(0, 0, 0, 0.9);
    box-shadow: 0px 4px 16px 4px rgba(0, 0, 0, 0.5);
    z-index: 1;
}


/* https://stackoverflow.com/questions/3331353/transitions-on-the-css-display-property */

.dropdown_content {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0.25s, opacity 0.25s ease-in;
}

.dropdown:hover .dropdown_content {
    opacity: 1;
    visibility: visible;
    transition: visibility 0.25s, opacity 0.25s ease-out;
}

.dropdown:hover .dropdown_button {
    background-color: #222;
}

.dropdown_button {
    padding: 10px;
}

.dropdown_content ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}


/* https://www.w3schools.com/css/css_grid.asp */

.footer {
    display: grid;
    grid-template-columns: 1fr 2fr;
}

.footer nav {
    text-align: right;
}

.footer ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.footer li {
    padding: 0 10px;
    display: inline;
}

.menu_classes ul {
    display: grid;
    grid-template-columns: auto auto auto;
}

.menu_item img {
    width: 24px;
    height: 24px;
    padding: 4px;
    vertical-align: middle;
}

.menu_item li {
    padding: 10px;
}

.menu_item li,
.menu_item a {
    display: block;
    text-decoration: none;
}

.menu_item li:hover {
    background-color: #222;
}

.menu_item li.inactive {
    color: #555;
    cursor: not-allowed;
}

.menu_item li.inactive:hover {
    background-color: #111;
}

.menu_item li.inactive img {
    opacity: 0.3;
}

img.portrait {
    width: 90%;
    clip-path: circle(50% at center);
}

iframe {
    width: 100%;
    border: none;
}


/* https://www.w3schools.com/css/css3_mediaqueries.asp */

@media print {
    .menu {
        display: none;
    }
    .logo {
        display: none;
    }
    .header_logo {
        display: none;
    }
    body {
        color: black !important;
    }
}

